# python-fastapi-skeleton

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
src/app/: config.py  log_conf.yml  main.py  routes.py
tests/: requirements.txt
tests/app/: test_routes.py
